kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collegeadvisor
  labels:
    name: collegeadvisor
    app: collegeadvisor
