kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collegeadvisor-ingress
  namespace: collegeadvisor
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rate-limit: "100"
    nginx.ingress.kubernetes.io/rate-limit-window: "1m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.collegeadvisor.com
    secretName: collegeadvisor-tls
  rules:
  - host: api.collegeadvisor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collegeadvisor-api-service
            port:
              number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: collegeadvisor
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: nginx-ingress-controller
